Join 2 windows crash #55166

Closed
opened 2018-05-23 16:13:51 +02:00 by Julien Kaspar · 11 comments
Member

System Information
Linux Ubuntu 17.10
Nvidia Quadro GP100

Blender Version
Broken: 2.8 37b5c52f11
Worked: 2.79

Short description of error
When joining the 3d viewport with the node editor from left to right (so that the 3d viewport stays) the blender file crashes.

Exact steps for others to reproduce the error
Open the file and click into the upper corner between the 3d view and node editor and swipe right while holding the left mouse button. Once the windows are joined, blender crashes immediately.

Blend. file
bug_report_3.blend

**System Information** Linux Ubuntu 17.10 Nvidia Quadro GP100 **Blender Version** Broken: 2.8 37b5c52f111 Worked: 2.79 **Short description of error** When joining the 3d viewport with the node editor from left to right (so that the 3d viewport stays) the blender file crashes. **Exact steps for others to reproduce the error** Open the file and click into the upper corner between the 3d view and node editor and swipe right while holding the left mouse button. Once the windows are joined, blender crashes immediately. **Blend. file** [bug_report_3.blend](https://archive.blender.org/developer/F3441242/bug_report_3.blend)
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Campbell Barton was assigned by Julian Eisel 2018-05-23 16:41:06 +02:00
Member

Same happens in Text Editor and Console (note, you have to draw over main region, not over the header). This is caused by 6e40b2de7a.
Another way to reproduce this is by using --debug-memory and joining any areas.

Same happens in Text Editor and Console (note, you have to draw over main region, not over the header). This is caused by 6e40b2de7a. Another way to reproduce this is by using `--debug-memory` and joining any areas.
Member

Not sure if there are currently specific rules for triaging #code_quest reports, but guess it's reasonable to tag this as high priority.

Not sure if there are currently specific rules for triaging #code_quest reports, but guess it's reasonable to tag this as high priority.
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Member

This comment was removed by @LazyDodo

*This comment was removed by @LazyDodo*
Member

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Member

didn't see previous discussion

didn't see previous discussion

This issue was referenced by 6955add502

This issue was referenced by 6955add502b273b24fa9ea44298cc7c396160e0f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55166
No description provided.