Fix T55166: crash joining areas

Caused by own commit 6e40b2de7ae8,

Tested w/o this call and can't find any errors so commenting the call.